# Fivox

./: .gitexternals  .gitignore  .gitreview  .gitsubprojects  .travis.yml  AUTHORS.txt  CMakeLists.txt  README.md
CMake/: CPackConfig.cmake  FindPackages.cmake  FindRequired.cmake  Fivox.cmake  ITKSettings.cmake  depends.txt
apps/: CMakeLists.txt  commandLineApplication.h  sbatch.sh  spheres.cpp  volumeHandler.h  volumeWriter.h  voxelize.cpp  voxelizeVSD.cpp
apps/computeVSD/: CMakeLists.txt  beerLambertProjectionImageFilter.h  computeVSD.cpp  projectionImageFilter.h
apps/samplePoint/: CMakeLists.txt  plot2D.py  sample-point.cpp
apps/synapseDensities/: CMakeLists.txt  synapse_densities.py
apps/voxelize/: CMakeLists.txt  beerLambertProjectionImageFilter.h  scaleFilter.h  volumeWriter.h  voxelize.cpp
apps/voxelizeBatch/: CMakeLists.txt  voxelize_batch.py
configs/: BlueConfigVSD  CMakeLists.txt
doc/: Changelog.md  RelNotes.md  UserGuide.md
doc/feature/: computeVSD.md  feature.md  genericEventLoading.md  lineEvents.md  pointDataEvolution.md  rescaleOutput.md
doc/userGuide/: applications.md  computeVSD.md  userGuide.md
examples/: dyecurve.txt
fivox/: CMakeLists.txt  attenuationCurve.h  attenuationFunctor.h  beerLambertProjectionImageFilter.h  compartmentFunctor.h  compartmentLoader.cpp  compartmentLoader.h  cudaImageSource.h  cudaImageSource.hxx  densityFunctor.h  event.h  eventFunctor.h  eventSource.cpp  eventSource.h  eventValueSummationImageSource.h  eventValueSummationImageSource.hxx  fieldFunctor.h  frequencyFunctor.h  functorImageSource.h  functorImageSource.hxx  genericLoader.cpp  genericLoader.h  helpers.h  imageSource.h  imageSource.hxx  inPlaceNeighborhoodFilter.h  inPlaceNeighborhoodFilter.hxx  itk.h  progressObserver.cpp  progressObserver.h  rescaleFilter.h  scaleFilter.h  somaLoader.cpp  somaLoader.h  spikeLoader.cpp  spikeLoader.h  synapseLoader.cpp  synapseLoader.h  testLoader.cpp  testLoader.h  (+7 more)
fivox/cuda/: CMakeLists.txt  simpleLFP.cu  simpleLFP.h
fivox/eventFunctors/: attenuationFunctor.h  squaredDistanceFunctor.h
fivox/itk/: beerLambertProjectionImageFilter.h
fivox/livre/: CMakeLists.txt  dataSource.cpp  dataSource.h
fivox/utils/: attenuationCurve.h  helperFunctions.h
tests/: CMakeLists.txt  compartmentSource.cpp  eventFunctor.cpp  kernelFilter.cpp  lfpValidation.cpp  sdk.h  somaSource.cpp  sources.cpp  staticSource.cpp  synapseSource.cpp  test.h  uriHandler.cpp  volumeHandler.cpp
